--- a/index.css
+++ b/index.css
@@ -4,24 +4,10 @@ body {
 	margin: 0;
 }
 
-body {
-	font-family: -apple-system, 'Helvetica Neue', Helvetica, sans-serif;
-}
-
-header {
-	position: absolute;
-	width: 500px;
-	height: 250px;
-	top: 50%;
-	left: 50%;
-	margin-top: -125px;
-	margin-left: -250px;
+.pane {
 	text-align: center;
 }
 
-header h1 {
-	font-size: 60px;
-	font-weight: 100;
-	margin: 0;
-	padding: 0;
+#btn-update-question {
+	float: right;
 }
